--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  color: #333;
+  background-color: #f9f9f9;
+}
 .search-container {
   position: relative;
   display: flex;
@@ -23,7 +29,7 @@
   overflow-y: auto;
   position: absolute;
   width: 78%;
-  background: #fff;
+  background: #f9f9f9;
   z-index: 1000;
 }
 
@@ -33,7 +39,7 @@
 }
 
 .suggestions li:hover {
-  background-color: #f0f0f0;
+  background-color: #f9f9f9;
 }
 #search-button {
   background-color: blue;
@@ -44,4 +50,7 @@
 .iframe {
   margin-top: 20px;
   border: 1px solid #ccc;
+}
+.definition {
+  font-size: 30px;
 }
