--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-body {
+body,
+p,
+a {
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
   color: #333;
-  background-color: #f9f9f9;
+  font-size: 30px;
 }
 .search-container {
   position: relative;
@@ -51,6 +53,11 @@ body {
   margin-top: 20px;
   border: 1px solid #ccc;
 }
-.definition {
-  font-size: 30px;
+
+.image {
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+  height: auto;
+  margin-top: 20px;
 }
